test/asm/label-macro-arg.err
ERROR: label-macro-arg.asm(38) -> label-macro-arg.asm::test_char(25):
    syntax error, unexpected '='
while expanding symbol "VAR_DEF"
error: Assembly aborted (1 errors)!
